--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     height: 100vh;
     background: #222;
-    perspective: 1000px;
+    /* perspective: 1000px; */
 }
 
 .container {
